fix: Clean notebook

--- a/postreise/plot/test/test_plot.ipynb
+++ b/postreise/plot/test/test_plot.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -429,6 +429,206 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total: 25 plants</th>\n",
+       "      <th>Top 25%</th>\n",
+       "      <th>Top 50%</th>\n",
+       "      <th>Top 75%</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lt</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 04:00:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 05:00:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 06:00:00</th>\n",
+       "      <td>23.643130</td>\n",
+       "      <td>11.376381</td>\n",
+       "      <td>18.161519</td>\n",
+       "      <td>20.439317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 07:00:00</th>\n",
+       "      <td>78.955841</td>\n",
+       "      <td>30.710788</td>\n",
+       "      <td>53.611201</td>\n",
+       "      <td>66.248715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 08:00:00</th>\n",
+       "      <td>127.802681</td>\n",
+       "      <td>39.976753</td>\n",
+       "      <td>78.986502</td>\n",
+       "      <td>104.212363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 09:00:00</th>\n",
+       "      <td>186.919064</td>\n",
+       "      <td>58.869653</td>\n",
+       "      <td>114.981316</td>\n",
+       "      <td>152.780306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 10:00:00</th>\n",
+       "      <td>236.771375</td>\n",
+       "      <td>75.377838</td>\n",
+       "      <td>144.476830</td>\n",
+       "      <td>193.445209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 11:00:00</th>\n",
+       "      <td>277.859193</td>\n",
+       "      <td>92.688022</td>\n",
+       "      <td>169.705237</td>\n",
+       "      <td>227.552481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 12:00:00</th>\n",
+       "      <td>279.650370</td>\n",
+       "      <td>73.588957</td>\n",
+       "      <td>161.430803</td>\n",
+       "      <td>225.079993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 13:00:00</th>\n",
+       "      <td>283.190229</td>\n",
+       "      <td>73.169788</td>\n",
+       "      <td>161.588996</td>\n",
+       "      <td>227.439151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 14:00:00</th>\n",
+       "      <td>283.770716</td>\n",
+       "      <td>76.269976</td>\n",
+       "      <td>165.648652</td>\n",
+       "      <td>229.993871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 15:00:00</th>\n",
+       "      <td>249.701822</td>\n",
+       "      <td>64.301552</td>\n",
+       "      <td>141.632932</td>\n",
+       "      <td>200.853903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 16:00:00</th>\n",
+       "      <td>235.565310</td>\n",
+       "      <td>75.583512</td>\n",
+       "      <td>143.351896</td>\n",
+       "      <td>194.271443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 17:00:00</th>\n",
+       "      <td>182.034225</td>\n",
+       "      <td>58.632688</td>\n",
+       "      <td>110.060184</td>\n",
+       "      <td>150.195732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 18:00:00</th>\n",
+       "      <td>117.115985</td>\n",
+       "      <td>34.869089</td>\n",
+       "      <td>68.084215</td>\n",
+       "      <td>95.895780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 19:00:00</th>\n",
+       "      <td>62.423214</td>\n",
+       "      <td>21.245266</td>\n",
+       "      <td>36.695860</td>\n",
+       "      <td>51.858871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 20:00:00</th>\n",
+       "      <td>11.747225</td>\n",
+       "      <td>3.455180</td>\n",
+       "      <td>5.516581</td>\n",
+       "      <td>9.813393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 21:00:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15 22:00:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Total: 25 plants    Top 25%     Top 50%     Top 75%\n",
+       "lt                                                                      \n",
+       "2016-07-15 04:00:00          0.000000   0.000000    0.000000    0.000000\n",
+       "2016-07-15 05:00:00          0.000000   0.000000    0.000000    0.000000\n",
+       "2016-07-15 06:00:00         23.643130  11.376381   18.161519   20.439317\n",
+       "2016-07-15 07:00:00         78.955841  30.710788   53.611201   66.248715\n",
+       "2016-07-15 08:00:00        127.802681  39.976753   78.986502  104.212363\n",
+       "2016-07-15 09:00:00        186.919064  58.869653  114.981316  152.780306\n",
+       "2016-07-15 10:00:00        236.771375  75.377838  144.476830  193.445209\n",
+       "2016-07-15 11:00:00        277.859193  92.688022  169.705237  227.552481\n",
+       "2016-07-15 12:00:00        279.650370  73.588957  161.430803  225.079993\n",
+       "2016-07-15 13:00:00        283.190229  73.169788  161.588996  227.439151\n",
+       "2016-07-15 14:00:00        283.770716  76.269976  165.648652  229.993871\n",
+       "2016-07-15 15:00:00        249.701822  64.301552  141.632932  200.853903\n",
+       "2016-07-15 16:00:00        235.565310  75.583512  143.351896  194.271443\n",
+       "2016-07-15 17:00:00        182.034225  58.632688  110.060184  150.195732\n",
+       "2016-07-15 18:00:00        117.115985  34.869089   68.084215   95.895780\n",
+       "2016-07-15 19:00:00         62.423214  21.245266   36.695860   51.858871\n",
+       "2016-07-15 20:00:00         11.747225   3.455180    5.516581    9.813393\n",
+       "2016-07-15 21:00:00          0.000000   0.000000    0.000000    0.000000\n",
+       "2016-07-15 22:00:00          0.000000   0.000000    0.000000    0.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -437,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +846,7 @@
        "2016-07-15 22:00:00       4814.945099  3049.041731  4073.128035  4583.023200"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -911,7 +1111,7 @@
        "2016-07-15 22:00:00           0.000000            0.000000        0.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -1600,7 +1800,7 @@
        "[61 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
