updated for new function names from transmission.py

--- a/postreise/analyze/test/transmission_analysis_test.ipynb
+++ b/postreise/analyze/test/transmission_analysis_test.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +119,12 @@
     "WI.congestion_base = WI.PF_base.div(WI.branches['Capacity']).apply(np.abs)  \n",
     "\n",
     "#Create congestion statistics file\n",
-    "WI.congestion_stats_base = transmission.generate_congestion_stats(WI.congestion_base,'congestion_stats_base')"
+    "WI.congestion_stats_base = transmission.generate_cong_stats(WI.congestion_base,'congestion_stats_base')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "12558           0         7753   0.0  1708.865265     0.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "9286            0           25   0.0  0.989445  0.161223  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,6 +453,13 @@
    "source": [
     "WI.congestion_stats_base.columns\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
