fix: Use OutputData object in notebooks

--- a/postreise/plot/test/november_meeting.ipynb
+++ b/postreise/plot/test/november_meeting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Plots For 11/27/2018 Presentation\n",
     "---\n",
-    "Plots in the slide deck presented to Nathan on 11/27/2018 have been generated through this notebook."
+    "This notebook generates the plots for the slide deck presented to Nathan on 11/27/2018"
    ]
   },
   {
@@ -16,7 +16,14 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../../\")"
+    "sys.path.append(\"../\")\n",
+    "sys.path.append(\"../../process\")\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter(\"ignore\")\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -24,15 +31,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\program files\\python\\python36\\lib\\site-packages\\matplotlib\\__init__.py:886: MatplotlibDeprecationWarning: \n",
-      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
-      "  \"found relative to the 'datapath' directory.\".format(key))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -49,41 +47,31 @@
     }
    ],
    "source": [
-    "import analyze\n",
-    "from plot.analyze_pg import AnalyzePG\n",
-    "from westernintnet.westernintnet import win_data\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.ioff()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download data from server. This needs to be done once per scenario. Since this procedure is lengthy, the data are saved locally as a pickle file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "sftp = analyze.setup_server_connection(\"U:\\\\.ssh\\\\id_rsa\")  \n",
-    "scenario_list = analyze.get_scenario_file_from_server(sftp)\n",
-    "scenario = 'western_scenario_Update01'\n",
-    "\"\"\"  \n",
-    "scenario = 'california2030Test01'  \n",
-    "scenario = 'california2020Test01'  \n",
-    "scenario = 'western_scenario_Update01'  \n",
-    "\"\"\"  \n",
-    "print('scenario: %s' % scenario)  \n",
-    "PG = analyze.get_PG(sftp, scenario_list, scenario)  \n",
-    "PG.to_pickle('U:\\\\PGData\\\\California_Nov2018\\\\PG.pkl')"
+    "import transferdata as td\n",
+    "from analyze_pg import AnalyzePG as apg\n",
+    "from westernintnet.westernintnet import win_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use  C:\\Users\\brdo\\scenario_data\\  to save/load local scenario data.\n"
+     ]
+    }
+   ],
+   "source": [
+    "od = td.OutputData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PG = pd.read_pickle('U:\\\\PGData\\\\California_Nov2018\\\\PG.pkl')"
+    "pg = od.get_data('western_scenario_Update01', 'PG')"
    ]
   },
   {
@@ -172,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -218,11 +206,11 @@
     }
    ],
    "source": [
-    "chart = AnalyzePG((PG, win_data, multiplier),\n",
-    "    ('2016-01-01-00', '2016-12-31-23', 'utc', 'H'),\n",
-    "    ['California', 'Western'],\n",
-    "    ['nuclear', 'hydro', 'coal', 'ng', 'solar', 'wind'],\n",
-    "    'chart', normalize=False)\n",
+    "chart = apg((pg, win_data, multiplier),\n",
+    "            ('2016-01-01-00', '2016-12-31-23', 'utc', 'H'),\n",
+    "            ['California', 'Western'],\n",
+    "            ['nuclear', 'hydro', 'coal', 'ng', 'solar', 'wind'],\n",
+    "            'chart', normalize=False)\n",
     "chart.get_plot(save=False)\n",
     "data_chart = chart.get_data()\n",
     "print(\"Total Generation in Western Interconnection: %d MWh\" % round(data_chart['Western']['Generation'].sum().sum()))\n",
@@ -238,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -277,11 +265,11 @@
     }
    ],
    "source": [
-    "stack = AnalyzePG((PG, win_data, multiplier),\n",
-    "    ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
-    "    ['California', 'Western'],\n",
-    "    ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
-    "    'stacked', normalize=False)\n",
+    "stack = apg((pg, win_data, multiplier),\n",
+    "            ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
+    "            ['California', 'Western'],\n",
+    "            ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
+    "            'stacked', normalize=False)\n",
     "stack.get_plot(save=False)\n",
     "data_stack = stack.get_data()\n",
     "print(\"Generation in the Western interconnection in MWh:\")\n",
@@ -297,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -359,11 +347,11 @@
     }
    ],
    "source": [
-    "curtailment = AnalyzePG((PG, win_data, multiplier),\n",
-    "    ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
-    "    ['California', 'Western'],\n",
-    "    ['solar', 'wind'],\n",
-    "    'curtailment', normalize=False)\n",
+    "curtailment = apg((pg, win_data, multiplier),\n",
+    "                  ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
+    "                  ['California', 'Western'],\n",
+    "                  ['solar', 'wind'],\n",
+    "                  'curtailment', normalize=False)\n",
     "curtailment.get_plot(save=False)\n",
     "data_curtailment = curtailment.get_data()\n",
     "print(\"Maximum curtailment for solar generators in the Western Interconnection: %d %%\" % \n",
@@ -383,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -448,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PG_2020 = pd.read_pickle('U:\\\\PGData\\\\California_Nov2018\\\\PG_CA2020.pkl')"
+    "pg_2020 = od.get_data('california2020Test01', 'PG')"
    ]
   },
   {
@@ -464,8 +452,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -501,11 +491,11 @@
     }
    ],
    "source": [
-    "stack_2020 = AnalyzePG((PG_2020, win_data, multiplier_2020),\n",
-    "    ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
-    "    ['California', 'Western'],\n",
-    "    ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
-    "    'stacked', normalize=False)\n",
+    "stack_2020 = apg((pg_2020, win_data, multiplier_2020),\n",
+    "                 ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
+    "                 ['California', 'Western'],\n",
+    "                 ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
+    "                 'stacked', normalize=False)\n",
     "stack_2020.get_plot(save=False)\n",
     "data_stack_2020 = stack_2020.get_data()\n",
     "print(\"Generation in the Western interconnection in MWh:\")\n",
@@ -521,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -576,18 +566,18 @@
     }
    ],
    "source": [
-    "curtailment_2020 = AnalyzePG((PG_2020, win_data, multiplier_2020),\n",
-    "                             ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
-    "                             ['California', 'Western'],\n",
-    "                             ['solar', 'wind'],\n",
-    "                             'curtailment', normalize=False)\n",
+    "curtailment_2020 = apg((pg_2020, win_data, multiplier_2020),\n",
+    "                       ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
+    "                       ['California', 'Western'],\n",
+    "                       ['solar', 'wind'],\n",
+    "                       'curtailment', normalize=False)\n",
     "curtailment_2020.get_plot(save=False)\n",
     "data_curtailment_2020 = curtailment_2020.get_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -688,11 +678,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PG_2030 = pd.read_pickle('U:\\\\PGData\\\\California_Nov2018\\\\PG_CA2030.pkl')"
+    "pg_2030 = od.get_data('california2030Test01', 'PG')"
    ]
   },
   {
@@ -704,8 +694,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -741,11 +733,11 @@
     }
    ],
    "source": [
-    "stack_2030 = AnalyzePG((PG_2030, win_data, multiplier_2030),\n",
-    "    ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
-    "    ['California', 'Western'],\n",
-    "    ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
-    "    'stacked', normalize=False)\n",
+    "stack_2030 = apg((pg_2030, win_data, multiplier_2030),\n",
+    "                 ('2016-06-01-00', '2016-06-20-23', 'local', 'H'),\n",
+    "                 ['California', 'Western'],\n",
+    "                 ['nuclear', 'coal', 'ng', 'hydro', 'wind', 'solar'],\n",
+    "                 'stacked', normalize=False)\n",
     "stack_2030.get_plot(save=False)\n",
     "data_stack_2030 = stack_2030.get_data()\n",
     "print(\"Generation in the Western interconnection in MWh:\")\n",
@@ -761,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -816,18 +808,18 @@
     }
    ],
    "source": [
-    "curtailment_2030 = AnalyzePG((PG_2030, win_data, multiplier_2030),\n",
-    "                             ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
-    "                             ['California', 'Western'],\n",
-    "                             ['solar', 'wind'],\n",
-    "                             'curtailment', normalize=False)\n",
+    "curtailment_2030 = apg((pg_2030, win_data, multiplier_2030),\n",
+    "                       ('2016-01-01-00', '2016-12-31-23', 'local', 'D'),\n",
+    "                       ['California', 'Western'],\n",
+    "                       ['solar', 'wind'],\n",
+    "                       'curtailment', normalize=False)\n",
     "curtailment_2030.get_plot(save=False)\n",
     "data_curtailment_2030 = curtailment_2030.get_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
