docs: Rewrite description

--- a/postreise/plot/test/november_meeting.ipynb
+++ b/postreise/plot/test/november_meeting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plots For 11/27/2018 Presentation\n",
+    "# Plots for 11/27/2018 Presentation\n",
     "---\n",
     "This notebook generates the plots for the slide deck presented to Nathan on 11/27/2018"
    ]
